Changes for 1.0beta8:

 - fixed improper handling of special characters i.e. '\/" (Alexei)
 - fixed Last100 and Prev100 for both Alarms and Alerts (Alexei)
 - fixed "STATUS OF ZABBIX". Command was changed to 'ps aux' (Alexei)
 - personalisation (remember default port number for hosts) (Alexei)
 - added table 'profiles' (Alexei)
 - assured uniqueness of host names (Alexei)
 - added upgrades/dbpatches/1.0beta7_to_1.0beta8/ with patches (Alexei)
 - mass update for triggers (activate, deactivate, delete) (Alexei)
 - all sendto() and recvfrom() were changed to write() and read() in function
 send_mail() (Alexei)
 - fixed bug in host addition procedure when template host is used (Alexei) 
 - different colors for different status of items, triggers, users
 (Alexei)

Changes for 1.0beta7:

 - startup scripts for RedHat 8.0. Thanks to John Crunk. (Alexei)
 - refresh rate is doubled for user 'guest' (Alexei)
 - mass insert and delete for items. (Alexei)
 - support for SNMPv2. New item type introduced. (Alexei)
 - improvements in housekeeping procedure (Alexei)
 - improvements for chart.php (Alexei)
 - added severity to pre-defined triggers (Alexei)
 - SO_LINGER is not default socket() option for zabbix_sender. (Alexei)
 - recvfrom() and sendto() were changed to read() and write() (Alexei)
 - fixed housekeeping procedure. Upgrade carefully! (Alexei)
 - support of template hosts. Remove tables hosts_templates and
   triggers_template. (Alexei) 
 - Show-Show-Show renamed to Graph-Trend-Compare in latest.html (Alexei)
 - fixed buffer overflow in zabbix_log(). (Alexei)
 - availability reports for trapper-based triggers (Alexei)
 - fixed possible zabbix_suckerd crash. It may happen if socket() returns 0.
   (Alexei)
 - added new Host status - Template(3). (Alexei)
 - fixed group "all" in latest.php (Alexei)
 - do not dump "Expression cannot be evaluated" in case if function.lastvalue
   is NULL. Logic was changed a bit, but the message is still there. (Alexei)